# Schema-Drift-Detector-CLI

./: .gitignore  LICENSE  README.md  map.json  package.json  pyproject.toml  requirements.txt  sample.json  sample_changed.json
schema_drift_cli/: __init__.py  __main__.py  cli.py  diff.py  fetch.py  output.py  schema.py
