[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schema-drift-cli"
version = "0.1.0"
description = "Detect schema drift in JSON APIs"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.scripts]
schema-drift = "schema_drift_cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]